--- a/propiedad.html
+++ b/propiedad.html
@@ -283,49 +283,163 @@
         </div>
         <h2 style="margin-top: 100px;"> Derechos de autor y copyright</h2>
         <h3>Derechos de autor y copyright</h3>
+        <div class="contenedor-mini border radius">
+            <div class="caja-texto">
+                <p>
+                    El derecho de autor reconoce al creador de la obra mientras que el copyright, representado por el
+                    símbolo ©, aparece cuando la obra ha sido publicada y está asociado a la idea "todos los derechos
+                    están reservados". <br /><br />
 
-
-
-
-
+                    El copyright se limita a la obra misma y no comprende al creador como sí hace el derecho de autor.
+                    Es decir, el derecho de autor reconoce el derecho natural del autor sobre su obra mientras que el
+                    copyright reconoce la negociación entre el autor y la sociedad para el uso de esta obra.
+                </p>
+            </div>
+        </div>
         <h3 style="margin-top: 50px;">¿Cuándo pasa a ser del dominio público?</h3>
-
-
-
-
-
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto">
+                <p>
+                    Según el Convenio de Berna las obras protegidas por el derecho de autor pasan al dominio público a
+                    los
+                    50 años de la muerte del autor.
+                </p>
+            </div>
+        </div>
         <h2 style="margin-top: 100px;">Licencias de software</h2>
-
-
-
-
-
-
-
-
+        <div class="contenedor-largo border radius">
+            <div class="caja-texto">
+                <p>
+                    La licencia de software es la autorización que otorga un autor o autores que permite el derecho a
+                    terceras personas de utilizar su creación o recurso.
+                    El autor ostenta el derecho intelectual exclusivo y lo concede a otros como un permiso, en este caso
+                    una licencia de software. Existen diferentes tipos de licencia, los cuales, entre otros, autorizan
+                    el uso, modificación o distribución del programa. <br /><br /> A continuación los tipos de licencia
+                    de software
+                    que se utilizan con mayor frecuencia: <br /><br />
+                <ul>
+                    <li>
+                        Freeware: <br />Es la licencia que se otorga con los programas gratuitos, sin límites ni en el
+                        tiempo ni en la
+                        funcionalidad del programa.
+                    </li><br />
+                    <li>
+                        Shareware y Trial: <br />Estos programas pueden ser utilizados de manera gratuita pero
+                        comúnmente son versiones de
+                        prueba, lo que el tiempo de uso es limitado. Una vez finalizado el tiempo de prueba hay que
+                        comprar el programa
+                        completo o desinstalarlo.
+                    </li><br />
+                    <li>
+                        Adware: <br />Suelen ser programas shareware pero al instalarlos de forma automática nos muestra
+                        publicidad; en
+                        ocasiones al ejecutarlo y en otras solamente al instalarle. Cuando se compra la versión de la
+                        licencia completa
+                        normalmente se elimina la publicidad.
+                    </li><br />
+                    <li>
+                        Software libre: <br />En este el autor entrega el programa para que sea usado, modificado,
+                        copiado y
+                        distribuido. Normalmente estos sirven de base para otros programas que si pueden ser de pago
+                        pero que suelen ser
+                        baratos.
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
         <h2 style="margin-top: 100px;">Tipos de licencias creative commons</h2>
         <h3>Condiciones: Reconocimiento-BY, No Comercial-NCNo Derivadas-ND, Compartir Igual-SA:</h3>
-
-
-
-
-
-
+        <div class="contenedor-largo-med border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
+                <h4>Reconocimiento-BY</h4>
+                <p>
+                    En cualquier uso o explotación que se haga de la obra autorizada por la licencia Creative Commons
+                    hará
+                    falta reconocer siempre la autoría de dicha obra. En efecto, esta condición se exige en todas las
+                    licenciasCreative Commonsy no puede ser excluida por el autor, pues no olvidemos que el
+                    reconocimiento de la autoría es un derecho moral irrenunciable por parte del autor y todas las
+                    licencias
+                    deben respetarlo y aplicarlo siempre.
+                </p><br />
+                <h4>No comercial</h4>
+                <p>
+                    Se prohíbe que la obra sea utilizada con fines comerciales (por ejemplo, el hilo musical en un
+                    negocio).
+                    Esta condición afecta al usuario, pero obviamente no afecta al autor que sigue siendo en todo
+                    momento
+                    propietario del copyright o derechos de autor; por tanto, esta condición no impide que al autor
+                    pueda
+                    comercializar con su obra.
+                </p><br />
+                <h4>Sin obras derivadas</h4>
+                <p>
+                    La autorización para explotar la obra no incluye la transformación para crear una obra derivada (por
+                    ejemplo, traducir una obra literaria).
+                </p><br />
+                <h4>Compartir igual</h4>
+                <p>
+                    La explotación autorizada incluye la creación de obras derivadas siempre que mantengan la misma
+                    licencia al ser divulgadas.
+                    El autor puede escoger cómo combina estas condiciones; es decir, tiene un margen de libertad para
+                    reducir o ampliar el alcance de la autorización que da para el uso de su obra: por ejemplo, el autor
+                    puede decidir excluir los usos comerciales de su obra o la modificación de ésta, o si la permite
+                    sólo bajo la condición de que la obra resultante quede sujeta a la misma licencia.
+                </p>
+            </div>
+        </div>
         <h3 style="margin-top: 50px;">Licencias</h3>
-
-
-
-
-
-
+        <div class="contenedor-largo-med2 border radius">
+            <h4>Reconocimiento (BY)</h4>
+            <p>
+                Esta licencia permite cualquier explotación de la obra, incluyendo una finalidad comercial, así como la
+                creación de obras derivadas, la distribución de las cuales también está permitida sin ninguna
+                restricción, con la única condición de que se haga referencia expresa al autor, es decir, que aparezca
+                su nombre en cualquier uso o acto de explotación que se haga de la obra. Recordemos que la obligación de
+                reconocimiento está presente en todas las licencias Creative Commons.
+            </p> <br/>
+            <h4>Reconocimiento - No Comercial (BY-NC)</h4>
+            <p>
+                Esta licencia permite la generación de obras derivadas siempre que no se haga un uso comercial de las
+                mismas. Tampoco se puede utilizar la obra original con finalidades comerciales.
+            </p> <br/>
+            <h4>Reconocimiento - No Comercial - Compartir Igual (BY-NC-SA)</h4>
+            <p>
+                Esta licencia no permite un uso comercial de la obra original ni de las posibles obras derivadas.
+                Además,
+                la distribución de estas obras derivadas se debe hacer con una licencia igual a la que regula la obra
+                original.
+            </p> <br/>
+            <h4>Reconocimiento - No Comercial - Sin Obra Derivada (BY-NC-ND)</h4>
+            <p>
+                Esta licencia no permite la generación de obras derivadas ni hacer un uso comercial de la obra original,
+                es decir, sólo son posibles los usos y finalidades que no tengan carácter comercial. Esta es la
+                licencia Creative Commons más restrictiva.
+            </p> <br/>
+            <h4>Reconocimiento - Compartir Igual (BY-SA)</h4>
+            <p>
+                Esta licencia permite el uso comercial de la obra y de las posibles obras derivadas, pero la
+                distribución
+                de éstas se debe hacer con una licencia igual a la que regula la obra original, es decir, la obra
+                derivada
+                que se lleve a cabo a partir de la obra original deberá ser explotada bajo la misma licencia.
+            </p> <br/>
+            <h4>Reconocimiento - Sin Obra Derivada (BY-ND)</h4>
+            <p>
+                Esta licencia permite el uso comercial de la obra pero no la generación de obras derivadas, es decir,
+                que
+                la obra sólo puede ser usada en su formato original, no cabe su transformación.
+            </p>
+        </div>
         <h2 style="margin-top: 100px;">Copyleft</h2>
-
-
-
-
-
-
-
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto" style="padding-top: 20px;">
+                <p>
+                    Es un método general para liberar un programa u otro tipo de trabajo (en el sentido de libertad, no
+                    de gratuidad), que requiere que todas las versiones modificadas y extendidas sean también libres.
+                </p>
+            </div>
+        </div>
         <div class="next">
             <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="imagenes.html"><i class="far fa-images"></i>
                     imágenes</a>.</p>
