--- a/imagenes.html
+++ b/imagenes.html
@@ -44,8 +44,8 @@
 
     <!-- TITLE -->
     <title>Imágenes para la web - David Zapico</title>
-</head>
-<body>
+</head> 
+<body class="blue">
     <header>
         <nav id="menu">
             <div class="menu-item">
@@ -199,7 +199,51 @@
         </nav>
     </header>
     <div id="contenido">
-        <h1></h1>
+        <h1>Imágenes para la web</h1>
+        <h2>Tipos de imágenes</h2>
+        <div class="contenedor border radius">
+
+        </div>
+
+
+
+
+
+
+        <h2 style="margin-top: 100px;">Formatos de imágenes</h2>
+        <h3>Relación calidad y “peso”</h3>
+
+
+
+        <h3 style="margin-top: 50px;">Formatos web: “jpg”,”gif”,”png”. Características y pros y contras de cada uno de ellos</h3>
+
+
+
+
+
+
+
+
+
+
+
+        <h2 style="margin-top: 100px;">Software para procesar imágenes</h2>
+
+
+
+
+        <h2 style="margin-top: 100px;">Optimización de imágenes para la web</h2>
+
+
+
+
+        <h2 style="margin-top: 100px;">Herramientas de optimización de imágenes</h2>
+        
+
+
+
+        <h2 style="margin-top: 100px;">Inclusión de imágenes en la web</h2>
+        
 
 
 
