--- a/pdfs.html
+++ b/pdfs.html
@@ -45,7 +45,7 @@
     <!-- TITLE -->
     <title>PDFs - David Zapico</title>
 </head>
-<body>
+<body class="white">
     <header>
         <nav id="menu">
             <div class="menu-item">
