--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div id="contenido">
         <h1>Diseño web - guía de estilo de una interfaz web</h1>
         <img src="assets/img/diseno-web.png" alt="diseño web">
-        <div class="texto">
+        <div class="caja-texto">
             <p>
                 El diseño web es un área enfocada en el desarrollo de interfaces digitales, como el diseño de sitios y
                 aplicaciones para web.
@@ -237,6 +237,9 @@
                 <li>Usabilidad</li>
                 <li>Tipos de imágenes</li>
             </ul>
+        </div>
+        <div class="next">
+            <p>Siguiente página <i class="far fa-arrow-right"></i> <a class="hover-shadow hover-color" href="planificacion.html"> <i class="fas fa-layer-group"></i> planificación</a>.</p>
         </div>
     </div>
     <div id="info-box">
